<resources>
    <string name="app_name">EPLDevelopment</string>
    <string name="action_settings">Settings</string>
    <string name="row">Row</string>
    <string name="grid">Grid</string>
    <string name="card">Card</string>
    <string name="id">ID</string>
    <string name="club_name">Club Name</string>
    <string name="founded">Founded</string>
    <string name="grounded">Grounded</string>
    <string name="manager">Manager</string>
    <string name="description">Description</string>
    <string name="logo">Url Logo</string>
</resources>
